src/objects/Role_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Strategic_Outcomes__c</fullName>
        <label>Strategic Outcomes</label>
        <picklist>
            <picklistValues>
                <fullName>Newly diagnosed given emotional support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People have skills, enhance independence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPS people maximise income from benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People get out confidently and safely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People make more use of products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learners are able to achieve potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People develop skills to gain work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information/transactions are accessible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fewer people have significant sight loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence, Information and Advice</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Priority__c</fullName>
        <label>Strategic Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Being There</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prevention</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Targets__c</fullName>
        <label>Strategic Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for the list...</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Check_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is a Driving License and Insurance Check required?  Note: This is a legal requirement for roles that involve driving.</inlineHelpText>
        <label>Driving Licence &amp; Vehicle Check Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Training_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If vehicle training is required E.g. MiDAS - please enter here</inlineHelpText>
        <label>Is Vehicle Training Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Coordinator__c</fullName>
        <inlineHelpText>This is required for services like TSS</inlineHelpText>
        <label>Volunteer Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager__c</fullName>
        <label>Volunteer Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waiting_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the role receives applications over your stated capacity, do you want them added to a waiting list for future recruitment?</inlineHelpText>
        <label>Waiting List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Pack__c</fullName>
        <inlineHelpText>Select the type of Welcome Pack which will be needed?</inlineHelpText>
        <label>Which Welcome Pack will be Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_skills_and_qualities_required__c</fullName>
        <inlineHelpText>Provide a few bullet points (no more than five) of the skills and qualities
required (for example, using Microsoft, friendly and caring nature, etc)</inlineHelpText>
        <label>What Skills and Qualities are Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to engage with older people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to engage with young people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to adhere to strict confidentiality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to work on your own initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An interest in home technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An understanding of sight problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confident people skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confident public Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enthusiastic and confident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good administrative skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good IT skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good listening and communication skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good organisational skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Telephone skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensitive and empathetic to others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articulate and an excellent communicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience of sight loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to influence others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impart knowledge to improve services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong personal commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understand legal duties and liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A financial background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant investment market expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An understanding of economic conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience of ethical investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An excellent communicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience of boards or committees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication and influencing skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proven effective decision making skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_support_will_I_be_given__c</fullName>
        <inlineHelpText>Enter the support which the Volunteers will be provided here</inlineHelpText>
        <label>What Support Will You Be Given?</label>
        <picklist>
            <picklistValues>
                <fullName>Understanding Sight Loss Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Induction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervision &amp; Support from your Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training as appropriate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sighted Guiding Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support from Volunteers &amp; Staff</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_will_I_be_doing2__c</fullName>
        <description>This one is the pick list the other is free form text</description>
        <inlineHelpText>Enter information about the expected activities of Volunteers</inlineHelpText>
        <label>What Will You Be Doing?</label>
        <picklist>
            <controllingField>Opportunity_Family__c</controllingField>
            <picklistValues>
                <fullName>Assist with a variety of admin tasks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answering and making telephone calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain records and computer files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create documents and input data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting and greeting visitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide sighted guiding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone clients and customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respond to questions and concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurately record information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using IT equipment and systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listen to Talk and Support group talks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Making appropriate contributions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create a friendly welcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link between group and staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit people in their home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Having a chat and providing company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read mail, magazines, etc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisting with personal correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help set up and run activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Making teas and coffees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acting as a sighted guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan and action local campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build local links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keeping supporters abreast of campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help organise campaign events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicising agreed campaigns.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accompany coordinators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assist with paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assist in accessing public transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving coordinators to and from events</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_will_I_be_doing__c</fullName>
        <inlineHelpText>Choose from pick list above or type into text box. Please do not use more than five bullet points in total</inlineHelpText>
        <label>What Will You Be Doing - Further Info</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_will_I_gain_from_the_role__c</fullName>
        <inlineHelpText>Please bullet list (MAXIMUM of 5) the key things that will be gained (for example, meeting new friends, working in a customer facing environment, etc)</inlineHelpText>
        <label>What Will You Gain from the Role?</label>
        <picklist>
            <picklistValues>
                <fullName>A chance to give something back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A chance to make a difference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience in a care setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience of fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working in an office environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working with a variety of people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working with people with sight loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working with older people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working with young people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting new people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New experiences and skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Reason__c</fullName>
        <label>Withdrawn Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <inlineHelpText>Home based=volunteer based at home, Local area=out and about in local area, On site=RNIB Group premises, schools, care homes</inlineHelpText>
        <label>Where Based?</label>
        <picklist>
            <picklistValues>
                <fullName>Home Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Your Local Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunities</label>
    <listViews>
        <fullName>Active_on_Website</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_on_Website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Opportunities Active on Website</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Location__c</columns>
        <columns>Service__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>What_skills_and_qualities_required__c</columns>
        <columns>Skills__c</columns>
        <columns>Interests__c</columns>
        <columns>Role_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Capacity__c</columns>
        <columns>Active_on_Website__c</columns>
        <filterScope>Everything</filterScope>
        <label>Approved Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Closing_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>Number_of_Spaces_Left__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date_Minus_7_Days__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Opportunities - Closing Next 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Created_today</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Opportunities Created Today</label>
    </listViews>
    <listViews>
        <fullName>GVT_Specific_View</fullName>
        <columns>NAME</columns>
        <columns>Role_Description__c</columns>
        <columns>Do_you_want_your_opportunity_advertised__c</columns>
        <columns>Vehicle_Check_Required__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Date_Minus_7_Days__c</columns>
        <columns>Risk_Assessment__c</columns>
        <columns>Hours_per_week__c</columns>
        <columns>Role_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>GVT Specific View</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_All</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>Number_of_Spaces_Left__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Role_involve_working_with_Children__c</columns>
        <filterScope>Everything</filterScope>
        <label>Opportunities - All</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_Almost_Filled</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Capacity__c</columns>
        <columns>Number_of_Applications__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Spaces_Left__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </filters>
        <label>Opportunities Less Than 5 Places Left</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_Approved</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>Number_of_Spaces_Left__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Volunteer_Manager__c</field>
            <operation>equals</operation>
            <value>Christine Harrison</value>
        </filters>
        <label>Opportunities - Approved</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>Number_of_Spaces_Left__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Opportunities - Rejected</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_With_Applications</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>Number_of_Spaces_Left__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Applications__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Opportunities - With Applications</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_With_No_Applications</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>Number_of_Spaces_Left__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Applications__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Opportunities - With No Applications</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_to_approve</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Applications__c</columns>
        <columns>Number_of_Spaces_Left__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent for approval</value>
        </filters>
        <label>Opportunities - To Approve</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Capacity__c</columns>
        <columns>Active_on_Website__c</columns>
        <columns>Opportunity_Family__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent for approval</value>
        </filters>
        <label>Opportunities Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Opptunities</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Opportunities</label>
    </listViews>
    <nameField>
        <displayFormat>Opportunity -{0000}</displayFormat>
        <label>Role Opp ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <recordTypes>
        <fullName>Corporate</fullName>
        <active>true</active>
        <description>Corporate sector support such as partnerships, marketing initiatives and corporate events</description>
        <label>Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internship</fullName>
        <active>true</active>
        <description>Volunteer internships</description>
        <label>Internship</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_Off</fullName>
        <active>true</active>
        <description>Supports for a few hours, a day or limited set period of time</description>
        <label>One Off</label>
    </recordTypes>
    <recordTypes>
        <fullName>Peer_Support</fullName>
        <active>true</active>
        <description>Individuals with personal experience of living with sight loss supporting others</description>
        <label>Peer Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional</fullName>
        <active>true</active>
        <description>Trustee, advisory panels and committee members</description>
        <label>Professional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Specialist</fullName>
        <active>true</active>
        <description>Opportunities requiring professional/specialist experience or qualification to carry out the role</description>
        <label>Specialist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard volunteer opportunities (e.g. Admin, Befriending, Campaigning, CYF, ECLO, Fundraising, Technology, etc.)</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trustee</fullName>
        <active>false</active>
        <description>Trusteeships</description>
        <label>Trustee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Experience</fullName>
        <active>true</active>
        <description>Students aged under 18 doing short term work experience</description>
        <label>Work Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>work_placement</fullName>
        <active>true</active>
        <description>Students gaining experience in their field of study</description>
        <label>Work Placement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Criminal_Record_Check_Region_Check</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND(INCLUDES(Location__c, &quot;Northern Ireland&quot;),   NOT(BEGINS(TEXT(DBS_Check_required__c), &quot;Access&quot;))),
AND(INCLUDES(Location__c, &quot;Scotland&quot;),   NOT(BEGINS(TEXT(DBS_Check_required__c), &quot;PVG&quot;)))
)</errorConditionFormula>
        <errorDisplayField>DBS_Check_required__c</errorDisplayField>
        <errorMessage>Criminal Record Checks not valid for Region selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Either_whatwillvols_or_further_info</fullName>
        <active>false</active>
        <description>Either What will Volunteers be doing multi-select picklist or the What will I be doing text must be filled in</description>
        <errorConditionFormula>AND( (ISBLANK(What_will_I_be_doing__c))  , (ISBLANK(What_will_I_be_doing2__c)))</errorConditionFormula>
        <errorMessage>You must enter information in either the What Will The Volunteer(s) Be Doing? field or What Will They Be Doing - Further Info</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_CRC_required_2_references_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Number_of_References_Required__c, &quot;2&quot;)), NOT(ISPICKVAL( DBS_Check_required__c , &quot;No Check Required&quot;)))</errorConditionFormula>
        <errorDisplayField>Number_of_References_Required__c</errorDisplayField>
        <errorMessage>At least two references are required if the Opportunity requires a Criminal Record Check</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_why_Opportunity_not_Advertised</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Do_you_want_your_opportunity_advertised__c ,&quot;No&quot;),  ISBLANK( If_not_why_not__c ) )</errorConditionFormula>
        <errorDisplayField>If_not_why_not__c</errorDisplayField>
        <errorMessage>Please enter a reason why you do not wish the Opportunity to be advertised</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Assessment</fullName>
        <active>false</active>
        <errorConditionFormula>Risk_Assessment__c  = FALSE</errorConditionFormula>
        <errorDisplayField>Risk_Assessment__c</errorDisplayField>
        <errorMessage>Please check that you have carried out a Risk Assessment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_Templates_GVT</fullName>
        <active>false</active>
        <description>Only GVT can edit template</description>
        <errorConditionFormula>IF(RecordType.Name=&quot;Template&quot;,
IF($User.Role_Template__c=FALSE,
TRUE,
FALSE),
FALSE)</errorConditionFormula>
        <errorMessage>You are not a system administrator so you are unable to edit this template</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Withdrawn_reason</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Withdrawn&quot;),  ISBLANK( Withdrawn_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Withdrawn_Reason__c</errorDisplayField>
        <errorMessage>You must add a withdrawn reason</errorMessage>
    </validationRules>
</CustomObject>